Don't forget the alpha component of colors, when needed.  b=372770  r+sr=bzbarsky